unpackaged/main/default/objects/ETCAR_Document_Setup__c/ETCAR_Document_Setup__c.object-meta.xml
<CustomObject>
    <label>Document Setup</label>
    <nameField>
        <displayFormat>Doc-{000}</displayFormat>
        <label>Document Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>