unpackaged/main/default/objects/ETCAR_Document_Setup__c/fields/Emirates__c.field-meta.xml
<CustomField>
    <fullName>Emirates__c</fullName>
    <label>Emirates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
            <value>
                <fullName>Ras al Khaimah</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Umm al Quwain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>