unpackaged/main/default/objects/ETCAR_Document_Setup__c/fields/Enable__c.field-meta.xml
<CustomField>
    <fullName>Enable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable</label>
    <type>Checkbox</type>
</CustomField>