unpackaged/main/default/objects/ETCAR_Document_Setup__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>ServiceType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rental Services</fullName>
            </value>
            <value>
                <fullName>Limo Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>