unpackaged/main/default/objects/ETCAR_Document_Setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Type__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Emirates__c</columns>
    <columns>Mandatory__c</columns>
    <columns>Enable__c</columns>
    <columns>ServiceType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>